--- a/hello.css
+++ b/hello.css
@@ -1,12 +1,33 @@
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-h1 {
+
+.title {
     background-color: lightcoral;
+    margin-bottom: 0.5rem;
+}
+
+h1 {
     text-align: center;
+    margin: 0 2.6rem;
 }
 
 input {
     border-color: aqua;
     border-style: groove;
+}
+
+input[type="radio"]:checked+label {font-weight: bold;}
+
+.in1{
+    margin-top: 0.7rem;
+    margin-bottom: 0.2rem;
+}
+
+.in2{
+    margin-bottom: 0.2rem;
+}
+
+.in3{
+    margin-bottom: 0.5rem;
 }
