--- a/quickCalc.css
+++ b/quickCalc.css
@@ -21,29 +21,31 @@ input {
     border-style: groove;
 }
 
-input[type="radio"]:checked+label {font-weight: bold;}
+input[type="radio"]:checked+label {
+    font-weight: bold;
+}
 
-.in1{
+.in1 {
     margin-top: 0.7rem;
     margin-bottom: 0.2rem;
 }
 
-.in2{
+.in2 {
     margin-bottom: 0.2rem;
 }
 
-.in3{
+.in3 {
     margin-bottom: 0.5rem;
 
 }
 
-#Calculate{
+#Calculate {
     font-weight: bold;
     font-size: 0.9rem;
     background-color: rgb(117, 212, 232);
 }
 
-.historyLog{
+.historyLog {
     display: flex;
     flex-direction: row;
 
